Kallisto integration test x86

--- a/Lucyfer-Kallisto-test.ipynb
+++ b/Lucyfer-Kallisto-test.ipynb
@@ -15,7 +15,7 @@
    "id": "00c5bd04-54bc-468e-b841-463b3bd8bd16",
    "metadata": {},
    "source": [
-    "Example from <a href='https://github.com/lyrasis/docker-blazegraph' target = '_blank'>lyrasis/docker-blazegraph</a> to validate connectivity to Blazegraph.  Prepare the request environment; not using `urlparse` or similar because it's a static URL without parameters."
+    "Example from <a href='https://github.com/lyrasis/docker-blazegraph' target = '_blank'>lyrasis/docker-blazegraph</a> to validate connectivity to Blazegraph.  Prepare the request environment; not using `urlparse` or similar because it's a static URL without parameters.  <a href='https://hub.docker.com/r/lyrasis/blazegraph' target='_blank'>Comprehensive documentation</a> is available from Docker Hub."
    ]
   },
   {
