graph-notebook magics not enabled yet

--- a/README-TOO.ipynb
+++ b/README-TOO.ipynb
@@ -52,6 +52,59 @@
   },
   {
    "cell_type": "markdown",
+   "id": "72857d57-2f7f-40ac-b6a2-535693668f54",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Graph Notebook setup\n",
+    "\n",
+    "Original project and reference:  <a href='https://github.com/aws/graph-notebook' target='_blank'>aws/graph-notebook</a>.  Get the graph premade starter notebooks:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f96a20b3-c6fc-4a2a-a65a-5328fe597ba1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "GRAPH_NOTEBOOK_DOCS=\"$HOME/graph-notebook-guide\"\n",
+    "!python -m graph_notebook.notebooks.install --destination \"$GRAPH_NOTEBOOK_DOCS\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c5e32bd-d324-4594-a347-26cb90d92409",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!tree \"$GRAPH_NOTEBOOK_DOCS\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5c92901-fa9d-460a-b998-55eaa77ecf03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext graph_notebook.magics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67456da0-4091-43cb-ba35-c31e27748f1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%graph_notebook_config"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f4fbe230-b44d-49b8-b6c4-5801807503b2",
    "metadata": {},
    "source": [
@@ -103,19 +156,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4ebf381e-9179-4a87-b5c6-ab40a4b62f44",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "autocmd VimEnter * NERDTree | set nu\n",
-      "NERDTree on start installed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!awk '/NERDTree/ { b = 1; } END { exit(!b); }' \"$HOME/.vimrc\" || \\\n",
     "    echo 'autocmd VimEnter * NERDTree | set nu' | tee -a \"$HOME/.vimrc\" && \\\n",
@@ -144,7 +188,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
