--- a/README-TOO.ipynb
+++ b/README-TOO.ipynb
@@ -84,6 +84,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "198cd878-64bd-402d-b22d-6765dbe551db",
+   "metadata": {},
+   "source": [
+    "### Validate the environment\n",
+    "\n",
+    "The premade Graph Notebook Guide was developed for Jupyter Notebook, not Jupyter Lab.  Notebook shared a single Python kernel among all open notebooks (often one at a time).  As a result, the Jupyter Lab/Lucyfer environment requires that the graph database be initialized in every single notebook file where it's used, since kernels aren't shared by default.  The cells in this section are used for configuring and testing connectivity with the database.  Adjust these parameters as you see fit:\n",
+    "\n",
+    "- host -- the Blazegraph or AWS Neptune name or IP address\n",
+    "- port -- The port where the database listens\n",
+    "\n",
+    "The correct initialization sequence is:\n",
+    "\n",
+    "1. Load the graph notebook magic keywords\n",
+    "1. Generate the graph database connectivity configuration for the current kernel\n",
+    "1. Check status - `200` should be a valid request\n",
+    "1. Run the sample SPARQL query to validate that the database is up"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e5c92901-fa9d-460a-b998-55eaa77ecf03",
@@ -100,13 +120,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%graph_notebook_config"
+    "%%graph_notebook_config\n",
+    "{\n",
+    "  \"host\": \"192.168.1.157\",\n",
+    "  \"port\": 9999,\n",
+    "  \"ssl\": false,\n",
+    "  \"sparql\": {\n",
+    "    \"path\": \"bigdata/sparql\"\n",
+    "  }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "032af280-5845-4f80-8312-ebc9dea5758c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%status"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d55fcaf-426b-4b4f-9463-22b2bf579c65",
+   "metadata": {},
+   "source": [
+    "The database is up and reachable if the previous cell reports a `200` status.  Confirm that SPARQL queries may be issued against it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "361a3bc3-0027-4a2f-9036-d037eaa79b5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sparql\n",
+    "\n",
+    "INSERT DATA {\n",
+    "    <http://s-1000-1> <http://p-1> <http://o-1> .\n",
+    "    <http://s-1000-2> <http://p-2> <http://o-2> .\n",
+    "    <http://s-1000-3> <http://p-3> <http://o-3> .\n",
+    "    <http://s-1000-4> <http://p-4> <http://o-4> .\n",
+    "    <http://s-1000-5> <http://p-5> <http://o-5> .\n",
+    "    <http://s-1000-6> <http://p-6> <http://o-6> .\n",
+    "    <http://s-1000-7> <http://p-7> <http://o-7> .\n",
+    "    <http://s-1000-8> <http://p-8> <http://o-8> .\n",
+    "    <http://s-1000-9> <http://p-9> <http://o-9> .\n",
+    "    <http://s-1000-10> <http://p-10> <http://o-10> .\n",
+    "    <http://s-1000-11> <http://p-11> <http://o-11> .\n",
+    "    <http://s-1000-12> <http://p-12> <http://o-12> .\n",
+    "    <http://s-1000-13> <http://p-13> <http://o-13> .\n",
+    "    <http://s-1000-14> <http://p-14> <http://o-14> .\n",
+    "    <http://s-1000-15> <http://p-15> <http://o-15> .\n",
+    "    <http://s-1000-16> <http://p-16> <http://o-16> .\n",
+    "    <http://s-1000-17> <http://p-17> <http://o-17> .\n",
+    "    <http://s-1000-18> <http://p-18> <http://o-18> .\n",
+    "    <http://s-1000-19> <http://p-19> <http://o-19> .\n",
+    "    <http://s-1000-20> <http://p-20> <http://o-20> .\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab573aae-d30b-4129-962a-184fe0f3dc48",
+   "metadata": {},
+   "source": [
+    "Lucyfer is ready to run experiments against the database if none of the preceding cells reported errors."
    ]
   },
   {
    "cell_type": "markdown",
    "id": "f4fbe230-b44d-49b8-b6c4-5801807503b2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "---\n",
     "## Vim\n",
