Refined SPARQL support, discarded AWS graph-notebook

--- a/README-TOO.ipynb
+++ b/README-TOO.ipynb
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49c3765f-529f-4c70-9f3c-0d08d40bedfd",
+   "id": "76c2f8ff-6910-4ac1-9266-d9f062d0b8f9",
    "metadata": {
     "tags": []
    },
@@ -48,6 +48,40 @@
     "![[ -e \"$HOME/.bashrc\" ]] || cp -v \"/etc/skel/.bashrc\" \"$HOME\"\n",
     "\n",
     "![[ -e \"$HOME/.profile\" ]] || cp -v \"/etc/skel/.profile\" \"$HOME\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abef6167-45d6-4d11-9f23-659fccd792fb",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Complete the Jupyter/Lucyfer configuration\n",
+    "\n",
+    "Install the notebook extensions in user space.\n",
+    "\n",
+    "**It is very important to complete this step before using this environment!**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "371fdbcb-f244-469e-9dd2-691d0a00798a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "!jupyter contrib nbextension install --user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddb25b4d-d5f1-4791-a85e-a75f79940bce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!tree ~/.jupyter"
    ]
   },
   {
@@ -277,7 +311,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
