SPARQL test notebook

--- a/SPARQL-test.ipynb
+++ b/SPARQL-test.ipynb
@@ -96,7 +96,9 @@
    "source": [
     "## Wikipedia examples\n",
     "\n",
-    "These were added because the queries are 2x to 10x faster than the DBpedia examples.  Exercising the database, the queries are meaningles otherwise."
+    "These were added because the queries are 2x to 10x faster than the DBpedia examples.  Exercising the database, the queries are meaningles otherwise.\n",
+    "\n",
+    "**<a href='https://www.wikidata.org/wiki/Wikidata:SPARQL_query_service/queries/examples#See_also' target='_blank'>Wikipedia SPARQL examples</a>**."
    ]
   },
   {
@@ -159,6 +161,24 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cf6e65f7-b9f2-497d-af32-bb8cfac8c818",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "select distinct ?item ?itemLabel ?itemDescription ?sitelinks where {\n",
+    "    ?item wdt:P31 wd:Q5;  # Any instance of a human.\n",
+    "          wdt:P19/wdt:P131* wd:Q60;  #  Who was born in any value (eg. a hospital)\n",
+    "# that has the property of 'administrative area of' New York City or New York City itself.\n",
+    "             wikibase:sitelinks ?sitelinks.\n",
+    "   \n",
+    "    SERVICE wikibase:label { bd:serviceParam wikibase:language \"en,nl\" }\n",
+    "}\n",
+    "ORDER BY DESC(?sitelinks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8afb60b2-1011-4c59-a8a9-42d2c3cca12b",
    "metadata": {},
    "outputs": [],
    "source": []
