RC1 ARM64, SPARQL, clean up

--- a/README-1ST.ipynb
+++ b/README-1ST.ipynb
@@ -52,36 +52,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abef6167-45d6-4d11-9f23-659fccd792fb",
+   "id": "8f13362b-60c8-43cb-8b29-86515e445ad9",
    "metadata": {},
    "source": [
     "---\n",
-    "## Complete the Jupyter/Lucyfer configuration\n",
+    "## README-SPARQL\n",
     "\n",
-    "Install the notebook extensions in user space.\n",
-    "\n",
-    "**It is very important to complete this step before using this environment!**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "371fdbcb-f244-469e-9dd2-691d0a00798a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "!jupyter contrib nbextension install --user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ddb25b4d-d5f1-4791-a85e-a75f79940bce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!tree ~/.jupyter"
+    "Run the [README-SPARQL notebook](./README-SPARQL.ipynb) to validate that graph data SPARQL queries and display work as expected.  Some of those queries are very slow because they run against public DBpedia and Wikipedia endpoints.  Neither database is well-optimized for fast responses."
    ]
   },
   {
@@ -94,13 +71,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65374c2b-0c57-46bd-89e1-20cbd82e23a5",
+   "metadata": {},
+   "source": [
+    "**<span style='color: #f00;'>IMPORTANT</span>**\n",
+    "\n",
+    "This test fails because the Conda/Linux installation of `pandoc` has a conflict.  Bug raised with the Jupyter team.  Uncomment the line and execute once the issue is resolved."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3573029f-0d0c-46b3-a5ba-0de7434d7887",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!jupyter nbconvert --to pdf \"README-TOO.ipynb\""
+    "# !jupyter nbconvert --to pdf \"README-TOO.ipynb\""
    ]
   },
   {
@@ -178,14 +165,6 @@
     "\n",
     "There's a sample `.gitignore` file available in `/etc/skel` with "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86b70e27-1071-4ab1-ba06-4a83971ce84c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
