--- a/README-SPARQL.ipynb
+++ b/README-SPARQL.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# SPARQL notebook examples\n",
+    "# README SPARQL validation test\n",
     "\n",
     "For details head over to Paulo Villegas' **<a href='https://github.com/paulovn/sparql-kernel/blob/master/LICENSE' target='_blank'>sparql-kernel</a>** project on GitHub.\n",
     "\n",
@@ -35,6 +35,7 @@
    "id": "e01836a4-891f-41dd-8120-395b9190f3b1",
    "metadata": {},
    "source": [
+    "---\n",
     "## DBpedia examples\n",
     "\n",
     "DBpedia offers several <a href='https://es.dbpedia.org/sparql?nsdecl' target='_blank'>predefined prefixes</a> that these examples leverage."
@@ -94,6 +95,7 @@
    "id": "22071fc8-7285-48f3-9cd7-2e89c5978882",
    "metadata": {},
    "source": [
+    "---\n",
     "## Wikipedia examples\n",
     "\n",
     "These were added because the queries are 2x to 10x faster than the DBpedia examples.  Exercising the database, the queries are meaningles otherwise.\n",
@@ -122,7 +124,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f658e15c-21f2-43a1-a5ec-67fbb00e1346",
+   "id": "fe9ffa0e-cab0-4060-ac75-fb880a6d5a98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%display table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7f759e1-c8b3-4604-b94e-bf6dd2d030db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +143,8 @@
     "{\n",
     "  ?item wdt:P31 wd:Q146. # Must be of a cat\n",
     "  SERVICE wikibase:label { bd:serviceParam wikibase:language \"ru\". } # Helps get the label in your language, if not, then en language\n",
-    "}"
+    "}\n",
+    "LIMIT 20"
    ]
   },
   {
@@ -146,7 +159,8 @@
     "{\n",
     "  ?item wdt:P31 wd:Q146. # Must be of a cat\n",
     "  SERVICE wikibase:label { bd:serviceParam wikibase:language \"[AUTO_LANGUAGE],en\". } # Helps get the label in your language, if not, then en language\n",
-    "}"
+    "}\n",
+    "LIMIT 20"
    ]
   },
   {
