Working ARM64 dedicated image - no Julia, no R

--- a/README-SPARQL.ipynb
+++ b/README-SPARQL.ipynb
@@ -118,7 +118,7 @@
    "id": "c870b2a7-0f1c-4d38-bdb1-2caa9c9c62b4",
    "metadata": {},
    "source": [
-    "Tests connectivity and basic functionality by generating a list of cats breeds in Russian.  Some breeds don't have Spanish names defined, so the item label is the `itemID`.  Compare the results against the output from the next query."
+    "Tests connectivity and basic functionality by generating a list of cats breeds in Russian.  Some breeds don't have Russian names defined, so the item label is the `itemID`.  Compare the results against the output from the next query."
    ]
   },
   {
