Confirmed Kotlin with dataframes, plots, full sci/eng functionality - fix #12.

--- a/README-SPARQL.ipynb
+++ b/README-SPARQL.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "For details head over to Paulo Villegas' **<a href='https://github.com/paulovn/sparql-kernel/blob/master/LICENSE' target='_blank'>sparql-kernel</a>** project on GitHub.\n",
     "\n",
-    "These examples are only for validating that the basic SPARQL Kernel features work.\n",
+    "These examples are for validating that the basic SPARQL Kernel features work.\n",
     "\n",
     "**<span style='color: #f00;'>Query responses vary from instantaneous to 2 minutes</span>** becuase DBpedia is a public service, its data architecture is somewhat flat, and everyone and their mother bang on the database 7\\*24\\*365.\n",
     "\n",
