--- a/README-1ST.ipynb
+++ b/README-1ST.ipynb
@@ -152,6 +152,7 @@
    "source": [
     "!awk '/NERDTree/ { b = 1; } END { exit(!b); }' \"$HOME/.vimrc\" || \\\n",
     "    echo 'autocmd VimEnter * NERDTree | set nu' | tee -a \"$HOME/.vimrc\" && \\\n",
+    "    echo 'autocmd VimEnter * if len($TERM) && argc() | wincmd l | endif' | tee -a \"$HOME/.vimrc\" && \\\n",
     "    echo \"NERDTree on start installed\""
    ]
   },
@@ -183,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
