Refresh readme notebooks w/ clean outputs and updated metadata
Signed-off-by: Phillip Ross <phillip.w.g.ross@gmail.com>

--- a/README-Kotlin.ipynb
+++ b/README-Kotlin.ipynb
@@ -152,7 +152,7 @@
    "name": "kotlin",
    "nbconvert_exporter": "",
    "pygments_lexer": "kotlin",
-   "version": "1.7.0-dev-3303"
+   "version": "1.8.0-RC"
   }
  },
  "nbformat": 4,
