--- a/README-1ST.ipynb
+++ b/README-1ST.ipynb
@@ -92,6 +92,43 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dbad9cc0-70cf-485f-a973-320ba7bcbaaa",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Lucyfer/Jupyter look and feel\n",
+    "\n",
+    "Set the Dark Lucyfer environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8f7eb581-46c0-4526-af74-09860de260ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: line 1: local: can only be used in a function\n",
+      "mkdir: cannot create directory ‘’: No such file or directory\n",
+      "'/etc/skel/.jupyter/lab/user-settings/@jupyterlab/codemirror-extension/commands.jupyterlab-settings' -> ''\n",
+      "cp: cannot create regular file '': No such file or directory\n"
+     ]
+    }
+   ],
+   "source": [
+    "!if [[ ! -e \"$HOME/.jupyter/lab/user-settings/@jupyterlab/codemirror-extension/commands.jupyterlab-settings\" ]] ;\\\n",
+    "    then \\\n",
+    "        local target=\".jupyter/lab/user-settings/@jupyterlab/codemirror-extension\" ; \\\n",
+    "        mkdir -p \"$target\" ; \\\n",
+    "        cp -v \"/etc/skel/.jupyter/lab/user-settings/@jupyterlab/codemirror-extension/commands.jupyterlab-settings\" \"$target\" ; \\\n",
+    "    fi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f4fbe230-b44d-49b8-b6c4-5801807503b2",
    "metadata": {
     "tags": []
@@ -184,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
