--- a/README-1ST.ipynb
+++ b/README-1ST.ipynb
@@ -52,6 +52,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff2cda11-a186-4044-bff4-533e3414a81e",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "### Shell vi vs emacs key bindings\n",
+    "\n",
+    "The bash configuration in this section sets the keyboard `vim` style, modal keyboard bindings.  If you wish to use `emacs` bindings (e.g. `Ctl-A` to begining of line) change the `.bash_profile` line:\n",
+    "\n",
+    "```bash\n",
+    "set -o vi\n",
+    "```\n",
+    "to\n",
+    "\n",
+    "```bash\n",
+    "set -o emacs\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8f13362b-60c8-43cb-8b29-86515e445ad9",
    "metadata": {},
    "source": [
@@ -184,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
