Documented how to export existing PGP/GPG keys, and how to import them to the Lucyfer environment.  Added links for how to add GPG keys to a GitHub account, the motivation behind adding this section to the README-1st notebook.

--- a/README-1ST.ipynb
+++ b/README-1ST.ipynb
@@ -185,7 +185,79 @@
     "---\n",
     "## .gitignore\n",
     "\n",
-    "There's a sample `.gitignore` file available in `/etc/skel` with "
+    "There's a sample `.gitignore` file available in `/etc/skel` that you may use as a basis.  It ignores Lucyfer, PTPython, iPython, build, and PyCharm temporary files."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cae18d7f-14e5-4926-a35d-c47957b53e7a",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## GPG keys for GitHub code signing\n",
+    "\n",
+    "Some projects require committers to sign their commits using a PGP/GPG key added to their GitHub or GitLab accounts  This section explains how to get the keys to work in Lucyfer **and** in the hosting machine, to avoid duplicating keys or configurations.\n",
+    "\n",
+    "First ensure that you have a valid key:\n",
+    "\n",
+    "- Creating a GPG key pair (if you don't already have one):\n",
+    "- Extract and import existing key to a new machine:\n",
+    "\n",
+    "The new machine, in this case, is the Lucyfer image.  **<span style='color: #ffa500'>Although you may create a key from a Lucyfer console, it's not recommended.</span>**  Create the key pair outside of Lucyfer and import it into this environment.\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "User name `alice` uses her current machine for experimentation and development in the `$HOME/development/widget` directory.  Lucyfer and PyCharm both point at the `widget` directory for source files, tests, and notebooks.  `alice` runs these commands to export her private keys to the Lucyfer environment:\n",
+    "\n",
+    "```bash\n",
+    "\n",
+    "gpg --list-secret-keys alice@example.com\n",
+    "\n",
+    "# Finds the key, which is the long hexadecimal number next to, or above her email address\n",
+    "# depending on the GPG version installed.  For this example, let's call it: 4269B0B0A9\n",
+    "\n",
+    "gpg --export-secret-keys \"4269B0B0A9\" > ~/development/widget/private.key\n",
+    "```\n",
+    "\n",
+    "GPG will ask for the user's passphrase, then output the binary representation of the key to `~/development/widget/private.key`.  The key is ready for import into Lucyfer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27b048a9-1d40-4fde-9955-f19407e36270",
+   "metadata": {},
+   "source": [
+    "### Importing the key to Lucyfer\n",
+    "\n",
+    "1. Open a terminal console\n",
+    "2. Copy the private key from earlier in this section to the Lucyfer working directory as `private.key`\n",
+    "3. Execute this code in the terminal console:\n",
+    "\n",
+    "   ```bash\n",
+    "   gpg --import \"./private.key\" && rm -f \"./private.key\"\n",
+    "   ```\n",
+    "\n",
+    "4. Enter the passphrase\n",
+    "\n",
+    "Done!  You can check it's in by running:\n",
+    "\n",
+    "```bash\n",
+    "!gpg --list-keys alice@example.com\n",
+    "```\n",
+    "\n",
+    "Don't forget to use the email address associated with your email address."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "006b4962-02ab-40ba-a29c-057cad3bff42",
+   "metadata": {},
+   "source": [
+    "### Adding a GPG key to your GitHub account\n",
+    "\n",
+    "By adding the key into Lucyfer, you will be able to run Git commands and commits from within this environment, from the native IDE, from the native console, or from your favorite Git client (e.g. SourceTree).\n",
+    "\n",
+    "Follow these <a href='https://docs.github.com/en/authentication/managing-commit-signature-verification/adding-a-gpg-key-to-your-github-account' target='_new'>instructions on how to add your GPG key to your GitHub account</a>."
    ]
   }
  ],
