--- a/README-Kotlin.ipynb
+++ b/README-Kotlin.ipynb
@@ -152,7 +152,7 @@
    "name": "kotlin",
    "nbconvert_exporter": "",
    "pygments_lexer": "kotlin",
-   "version": "1.8.0-RC"
+   "version": "1.9.23"
   }
  },
  "nbformat": 4,
